--- a/main.css
+++ b/main.css
@@ -1,9 +1,13 @@
 .container {
     margin: 20px;
     display: grid;
-    grid-template-columns: 15rem 15rem;
+    grid-template-columns: repeat(auto-fill, 10rem);
+	grid-template-rows: 20rem;
     justify-content: center;
     grid-gap: 1.5rem;
+	grid-auto-rows: minmax(8rem, auto);
+	grid-auto-flow: row;
+	grid-auto-columns: 5rem;
 }
 
 .quote {
