--- a/forms/main.css
+++ b/forms/main.css
@@ -1,4 +1,5 @@
 .container {
+	position: relative;
     margin: 150px auto;
     border: 1px solid black;
     width: 200px;
@@ -8,10 +9,22 @@
 }
 
 .box {
+	position: absolute;
     background: red;
     width: 100%;
     height: 100%;
-	transform: rotateX(30deg) rotateY(80deg) rotateZ(30deg);
+	transform:rotateY(80deg);
+	color: white;
+	font-family: sans-serif;
+	text-align: center;
+}
+
+.box2 {
+	position: absolute;
+    background: blue;
+    width: 100%;
+    height: 100%;
+	transform: translateX(1rem) translateZ(-100rem);
 	color: white;
 	font-family: sans-serif;
 	text-align: center;
