--- a/forms/main.css
+++ b/forms/main.css
@@ -6,6 +6,8 @@
     height: 200px;
 	perspective: 1000px;
 	perspective-origin: 500px;
+	transform: rotateY(130deg);
+	transform-style: preserve-3d;
 }
 
 .box {
@@ -17,6 +19,7 @@
 	color: white;
 	font-family: sans-serif;
 	text-align: center;
+	z-index: 1;
 }
 
 .box2 {
@@ -24,7 +27,7 @@
     background: blue;
     width: 100%;
     height: 100%;
-	transform: translateX(1rem) translateZ(-100rem);
+	transform: translateX(1rem) translateZ(-10rem);
 	color: white;
 	font-family: sans-serif;
 	text-align: center;
