--- a/forms/main.css
+++ b/forms/main.css
@@ -10,7 +10,7 @@
 	transform-style: preserve-3d;
 }
 
-.box {
+.box1 {
 	position: absolute;
     background: red;
     width: 100%;
@@ -20,6 +20,7 @@
 	font-family: sans-serif;
 	text-align: center;
 	z-index: 1;
+	backface-visibility: visible;
 }
 
 .box2 {
