mixins and some fixes

--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -1,44 +1,78 @@
-/*
-Error: Invalid CSS after "}": expected "}", was ""
-        on line 102 of main.scss
+.char-highlight {
+  font-weight: bold;
+  font-size: 1.4rem;
+  color: #521751; }
 
-97:   .documentation-link:active {
-98:     color: white;
-99:     background: map-get($colors, secondary);
-100:     border-color: map-get($colors, secondary);
-101:   }
-102: }
+html {
+  font-size: 94.75%; }
+  @media (min-width: 40rem) {
+    html {
+      font-size: 125%; } }
 
-Backtrace:
-main.scss:102
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1308:in `expected'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1238:in `expected'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:1233:in `tok!'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:690:in `block'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:681:in `ruleset'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:707:in `block_child'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:700:in `block_contents'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:137:in `stylesheet'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/scss/parser.rb:41:in `parse'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/engine.rb:414:in `_to_tree'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/engine.rb:307:in `render_with_sourcemap'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:462:in `update_stylesheet'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `each'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:443:in `on_file_changed'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-3.7.4/lib/sass/plugin/compiler.rb:320:in `block in watch'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-listen-4.0.0/lib/sass-listen/event/config.rb:23:in `call'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:115:in `_process_changes'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:19:in `block in loop_for'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-listen-4.0.0/lib/sass-listen/event/processor.rb:15:in `loop_for'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:84:in `_wait_for_changes'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-listen-4.0.0/lib/sass-listen/event/loop.rb:42:in `block in setup'
-C:/Ruby27-x64/lib/ruby/gems/2.7.0/gems/sass-listen-4.0.0/lib/sass-listen/internals/thread_pool.rb:6:in `block in add'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"}\": expected \"}\", was \"\"\A         on line 102 of main.scss\A \A 97:   .documentation-link:active {\A 98:     color: white;\A 99:     background: map-get($colors, secondary);\A 100:     border-color: map-get($colors, secondary);\A 101:   }\A 102: }"; }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0; }
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  padding: 3rem 0;
+  box-sizing: border-box; }
+
+.sass-section, .sass-introduction, .sass-details {
+  border: 0.05rem solid #521751;
+  background: #f7e1f6;
+  padding: 2rem;
+  text-align: center;
+  width: 90%;
+  box-sizing: border-box; }
+  @media (min-width: 40rem) {
+    .sass-section, .sass-introduction, .sass-details {
+      font-size: 125%; } }
+  @media (min-width: 40rem) {
+    .sass-section, .sass-introduction, .sass-details {
+      width: 30rem; } }
+
+.sass-introduction {
+  box-shadow: 0.2rem 0.2rem 0.1rem #ccc; }
+  .sass-introduction p {
+    margin: 0; }
+
+.sass-details {
+  margin: 2rem 0; }
+
+.section-header {
+  border-bottom: 0.05rem solid #521751; }
+  .section-header h1 {
+    margin: 0 0 1rem 0; }
+
+.documentation-links {
+  list-style: none;
+  margin: 1rem 0 0 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  display: flex;
+  flex-direction: column; }
+  .documentation-links li {
+    margin: 0.2rem 0;
+    background: white; }
+  .documentation-links .documentation-link {
+    text-decoration: none;
+    color: #521751;
+    display: block;
+    padding: 0.2rem;
+    border: 0.05rem solid #521751; }
+    .documentation-links .documentation-link:hover, .documentation-links .documentation-link:active {
+      color: white;
+      background: #fa923f;
+      border-color: #fa923f; }
+
+/*# sourceMappingURL=main.css.map */
